--- a/site/index.html
+++ b/site/index.html
@@ -185,7 +185,7 @@
               <h4>Mark Hendrix</h4>
               <p>
                 <em>
-                  Cloud Engineer with 7+ years of progressive experience in IT, including 4 years designing, implementing,
+                  Cloud Engineer with 8+ years of progressive experience in IT, including 5 years designing, implementing,
                   and managing cloud-based infrastructure. Adept at leveraging AWS services, automating infrastructure with
                   Terraform, and enhancing system reliability as part of Agile teams. Certified in AWS, Kubernetes, and Red Hat
                   Linux, with a strong passion for continuous learning and innovation in cloud computing.
@@ -204,7 +204,7 @@
               <p><strong>Monitoring:</strong> Datadog, Grafana, LogicMonitor</p>
               <p><strong>Operating Systems:</strong> Linux, Windows Server</p>
               <p><strong>Scripting &amp; Automation:</strong> Python, Go, PowerShell, Bash</p>
-              <p><strong>Schedulers &amp; CI/CD:</strong> CircleCI, GitLab CI/CD, familiar with cron-style schedulers</p>
+              <p><strong>CI/CD:</strong> CircleCI, GitLab CI/CD, GitHub Actions familiar with cron-style schedulers</p>
               <p><strong>Source Control &amp; Repos:</strong> GitHub, GitLab</p>
             </div><!-- End Resume Item -->
 
@@ -245,10 +245,11 @@
               <h5>August 2025 - Present</h5>
               <p><em>Federal Reserve Bank of Richmond</em></p>
               <ul>
-                <li>Operate within a tightly controlled AWS GovCloud environment, working across multiple security and access boundaries to progress infrastructure changes.</li>
                 <li>Execute, monitor, and optimize GitLab CI/CD pipelines used to provision and update Databricks and AWS resources.</li>
-                <li>Maintain progress across sprint work despite limited documentation, slow turnaround from stakeholders, and inherited process bottlenecks.</li>
-                <li>Coordinate with other teams to obtain required approvals and access, producing repeatable runbooks and notes that clarify operational steps for upstream teams.</li>
+                <li>Enhance existing Terraform as needed to ensure necessary resources are managed efficiently.</li>
+                <li>Utilize Python to create and update tools used to manage infrastructure.</li>
+                <li>Operate within a tightly controlled AWS GovCloud environment, working across multiple security and access boundaries to progress infrastructure changes.</li>
+                <li>Produce repeatable runbooks and notes clarifying operational steps used by upstream teams.</li>
               </ul>
             </div><!-- End Resume Item -->
 
